# riscv

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT.md  README.md  asm.S  asm.h  asm32.S  assemble.ps1  assemble.sh  build.rs  typos.toml
.github/: bors.toml
ci/: install.sh  script.sh
riscv/: CHANGELOG.md  Cargo.toml  README.md  build.rs
riscv-macros/: CHANGELOG.md  Cargo.toml  README.md
riscv-macros/src/: lib.rs  riscv.rs  riscv_rt.rs
riscv-pac/: CHANGELOG.md  Cargo.toml  README.md
riscv-pac/macros/: Cargo.toml
riscv-pac/macros/src/: lib.rs
riscv-pac/src/: lib.rs  result.rs
riscv-pac/tests/: test.rs
riscv-pac/tests/ui/: fail_empty_macro.rs  fail_empty_macro.stderr  fail_more_than_one_trait.rs  fail_more_than_one_trait.stderr  fail_no_unsafe.rs  fail_no_unsafe.stderr  fail_unknown_trait.rs  fail_unknown_trait.stderr  fail_wrong_repr.stderr  pass_test.rs
riscv-peripheral/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
riscv-peripheral/.github/workflows/: clippy.yml  rustfmt.yml
riscv-peripheral/examples/: e310x.rs
riscv-peripheral/src/: aclint.rs  clic.rs  common.rs  hal.rs  hal_async.rs  lib.rs  macros.rs  plic.rs
riscv-peripheral/src/aclint/: mswi.rs  mtimer.rs  sswi.rs
riscv-peripheral/src/clic/: intattr.rs  intctl.rs  intie.rs  intip.rs  inttrig.rs  smclicconfig.rs
riscv-peripheral/src/hal/: aclint.rs
riscv-peripheral/src/hal_async/: aclint.rs
riscv-peripheral/src/plic/: claim.rs  enables.rs  pendings.rs  priorities.rs  threshold.rs
riscv-rt/: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  asm.S  asm.h  assemble.ps1  assemble.sh  build.rs  check-blobs.sh  exceptions.x  interrupts.x  link-rv64.x  link.x  link.x.in
riscv-rt/.github/: bors.toml
riscv-rt/.github/workflows/: blobs.yaml  build.yaml  changelog.yaml  ci.yaml  clippy.yaml  gh_labels.yaml  label.yaml  rustfmt.yaml
riscv-rt/asm/: riscv32i-unknown-none-elf-m.s  riscv32i-unknown-none-elf-s.s  riscv32imac-unknown-none-elf-m.s  riscv32imac-unknown-none-elf-s.s  riscv64imac-unknown-none-elf-m.s  riscv64imac-unknown-none-elf-s.s
riscv-rt/ci/: install.sh  script.sh
riscv-rt/examples/: device.x  device_s_mode.x  device_virt.x  empty.rs  hello.rs  multi_core.rs  qemu_semihosting.rs  qemu_uart.rs
riscv-rt/macros/: Cargo.toml
riscv-rt/macros/src/: lib.rs
riscv-rt/src/: asm.rs  exceptions.rs  interrupt.rs  interrupts.rs  lang_items.rs  lib.rs
riscv-rt/tests/: test.rs
riscv-rt/tests/ui/core_interrupt/: fail_empty_macro.stderr  fail_impl_interrupt_number.rs  fail_impl_interrupt_number.stderr  fail_signatures.rs  fail_signatures.stderr
riscv-rt/tests/ui/exception/: fail_empty_macro.stderr  fail_impl_exception_number.rs  fail_impl_exception_number.stderr  fail_signatures.stderr  pass_exception.rs
riscv-rt/tests/ui/external_interrupt/: fail_arguments.rs  fail_arguments.stderr  fail_empty_macro.stderr  fail_impl_interrupt_number.stderr  fail_signatures.stderr
riscv-semihosting/: CHANGELOG.md  Cargo.toml  README.md  build.rs
riscv-semihosting/.github/workflows/: check.yml  fmt.yml
riscv-semihosting/src/: debug.rs  export.rs  hio.rs  lib.rs  macros.rs
riscv-target-parser/: CHANGELOG.md  Cargo.toml  README.md
riscv-target-parser/src/: extension.rs  lib.rs
riscv-types/: CHANGELOG.md  Cargo.toml  README.md
riscv-types/src/: result.rs
riscv/macros/: Cargo.toml
riscv/macros/src/: lib.rs
riscv/src/: asm.rs  bits.rs  critical_section.rs  delay.rs  interrupt.rs  lib.rs  macros.rs  register.rs
riscv/src/interrupt/: machine.rs  supervisor.rs
riscv/src/register/: cycle.rs  cycleh.rs  dcsr.rs  dpc.rs  dscratch0.rs  dscratch1.rs  hpmcounterx.rs  instret.rs  macros.rs  marchid.rs  mcause.rs  mconfigptr.rs  mcounteren.rs  mcountinhibit.rs  mcycle.rs  mcycleh.rs  medeleg.rs  mhpmcounterx.rs  mideleg.rs  mie.rs  mimpid.rs  minstret.rs  minstreth.rs  mip.rs  misa.rs  miselect.rs  mseccfg.rs  mseccfgh.rs  mstatus.rs  mstatush.rs  mtinst.rs  mtopei.rs  mtopi.rs  mtval2.rs  mtvec.rs  mvendorid.rs  mvien.rs  mvienh.rs  pmpaddrx.rs  pmpcfgx.rs  (+16 more)
riscv/src/register/tests/: read_only_csr.rs  read_write_csr.rs  write_only_csr.rs
riscv/tests/ui/: fail_empty_macro.stderr  fail_no_unsafe.stderr  fail_unknown_trait.stderr  pass_test.rs
src/: aclint.rs  asm.rs  critical_section.rs  csr.rs  debug.rs  delay.rs  export.rs  hal_async.rs  hio.rs  interrupt.rs  io.rs  lib.rs  macros.rs  nr.rs  peripheral.rs  plic.rs  register.rs
tests/: Cargo.toml
tests-build/: Cargo.toml  build.rs  device.x  memory.x
tests-build/examples/: empty.rs
tests-build/src/: lib.rs
tests-qemu/: Cargo.toml  build.rs  memory-multihart.x  memory-s-mode.x
tests-qemu/examples/: multi_hart.rs  qemu_semihosting.rs  qemu_uart.rs
tests-trybuild/: Cargo.toml
tests-trybuild/tests/: test.rs
tests-trybuild/tests/riscv/: fail_empty_macro.rs  fail_unknown_trait.rs  pass_test.rs
tests-trybuild/tests/riscv-rt/core_interrupt/: fail_empty_macro.rs  fail_empty_macro.stderr  fail_impl_interrupt_number.stderr  fail_signatures.stderr
tests-trybuild/tests/riscv-rt/entry/: fail_arg_count.rs  fail_arg_count.stderr  fail_arg_type.rs  fail_arg_type.stderr  fail_async.rs  fail_async.stderr  fail_full.rs  fail_full.stderr  fail_public.rs  fail_public.stderr  fail_return_empty.rs  fail_return_empty.stderr  fail_return_tuple.rs  fail_return_tuple.stderr  pass_empty_safe.rs  pass_empty_unsafe.rs  pass_safe.rs  pass_unsafe.rs
tests-trybuild/tests/riscv-rt/exception/: fail_impl_exception_number.stderr  fail_signatures.rs  fail_signatures.stderr
tests-trybuild/tests/riscv-rt/external_interrupt/: fail_signatures.stderr  pass_external_interrupt.rs
tests-trybuild/tests/riscv-rt/post_init/: fail_arg_count.rs  fail_arg_count.stderr  fail_arg_type.rs  fail_arg_type.stderr  fail_async.rs  fail_async.stderr  fail_full.rs  fail_full.stderr  pass_empty_safe.rs  pass_empty_unsafe.rs  pass_safe.rs  pass_unsafe.rs
tests-trybuild/tests/riscv-rt/setup_interrupts/: fail_full.rs  fail_full.stderr  pass_empty_safe.rs  pass_empty_unsafe.rs  pass_safe.rs  pass_unsafe.rs
(+127 files in other folders)
