[workspace]
resolver = "2"
members = [
    "riscv",
    "riscv-pac",
    "riscv-peripheral",
    "riscv-rt",
    "riscv-semihosting",
    "riscv-target-parser",
    "riscv-types",
    "tests-build",
    "tests-trybuild",
]

default-members = [
    "riscv",
    "riscv-pac",
    "riscv-peripheral",
    "riscv-rt",
    "riscv-semihosting",
    "riscv-types",
]
