[workspace]
resolver = "2"
members = [
    "riscv",
    "riscv-macros",
    "riscv-pac",
    "riscv-peripheral",
    "riscv-rt",
    "riscv-semihosting",
    "riscv-target-parser",
    "riscv-types",
    "tests-build",
    "tests-trybuild",
    "xtask",
]

default-members = [
    "riscv",
    "riscv-macros",
    "riscv-pac",
    "riscv-peripheral",
    "riscv-rt",
    "riscv-semihosting",
    "riscv-types",
]
