[workspace]
resolver = "2"
members = [
    "riscv",
    "riscv-macros",
    "riscv-peripheral",
    "riscv-rt",
    "riscv-semihosting",
    "riscv-target-parser",
    "riscv-types",
    "tests-build",
    "tests-qemu",
    "tests-trybuild",
    "xtask",
]

default-members = [
    "riscv",
    "riscv-macros",
    "riscv-peripheral",
    "riscv-rt",
    "riscv-semihosting",
    "riscv-types",
]
