[package]
name = "riscv-peripheral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional =  true }
riscv = { path = "../riscv", version = "0.11.0" }
riscv-pac = { path = "../riscv-pac", version = "0.1.0" }

[features]
aclint-hal-async = ["embedded-hal-async"]

[package.metadata.docs.rs]
all-features = true
default-target = "riscv64imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf", "riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf",
    "riscv64imac-unknown-none-elf", "riscv64gc-unknown-none-elf",
]
