[package]
name = "riscv-peripheral"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/rust-embedded/riscv"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interfaces for standard RISC-V peripherals"
documentation = "https://docs.rs/riscv-peripheral"
keywords = ["riscv", "peripheral", "clint", "plic"]
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional =  true }
riscv = { path = "../riscv", version = "0.11.1" }
riscv-pac = { path = "../riscv-pac", version = "0.2.0" }

[dev-dependencies]
heapless = "0.8.0"

[features]
aclint-hal-async = ["embedded-hal-async"]

[package.metadata.docs.rs]
all-features = true
default-target = "riscv64imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf", "riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf",
    "riscv64imac-unknown-none-elf", "riscv64gc-unknown-none-elf",
]
