[package]
name = "riscv-peripheral"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/rust-embedded/riscv"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interfaces for standard RISC-V peripherals"
documentation = "https://docs.rs/riscv-peripheral"
keywords = ["riscv", "peripheral", "clint", "plic"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
paste = "1.0"
riscv = { path = "../riscv", version = "0.15.0" }
riscv-pac = { path = "../riscv-pac", version = "0.2.0" }

[package.metadata.docs.rs]
all-features = true
default-target = "riscv64imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf", "riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf",
    "riscv64imac-unknown-none-elf", "riscv64gc-unknown-none-elf",
]
