[package]
name = "riscv-rt"
version = "0.17.0"
rust-version = "1.81"
repository = "https://github.com/rust-embedded/riscv"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for RISC-V CPU's"
documentation = "https://docs.rs/riscv-rt"
keywords = ["riscv", "runtime", "startup"]
license = "MIT OR Apache-2.0"
edition = "2021"
links = "riscv-rt" # Prevent multiple versions of riscv-rt being linked

[package.metadata.docs.rs]
default-target = "riscv64imac-unknown-none-elf"
features = ["pre-init", "post-init"]
targets = [
    "riscv32i-unknown-none-elf", "riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf",
    "riscv64imac-unknown-none-elf", "riscv64gc-unknown-none-elf",
]

[build-dependencies]
riscv-target-parser = { path = "../riscv-target-parser", version = "0.1.2" }

[dependencies]
riscv = { path = "../riscv", version = "0.16.0", features = ["rt"] }
riscv-types = { path = "../riscv-types", version = "0.1.0" }
riscv-rt-macros = { path = "macros", version = "0.6.1" }

defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
panic-halt = "1.0.0"
riscv-semihosting = { path = "../riscv-semihosting", version = "0.2.1" }
riscv = { path = "../riscv", version = "0.16.0", features = ["critical-section-single-hart"] }

[features]
pre-init = []
post-init = []
s-mode = ["riscv-rt-macros/s-mode"]
single-hart = []
v-trap = ["riscv-rt-macros/v-trap", "riscv/rt-v-trap"]
u-boot = ["riscv-rt-macros/u-boot", "single-hart"]
no-interrupts = []
no-exceptions = []
no-mhartid = ["single-hart"]
no-xie-xip = []
no-xtvec = []
device = []
memory = []
defmt = ["dep:defmt"]
pre-default-start-trap = ["riscv-rt-macros/pre-default-start-trap"]
