[package]
name = "riscv-target-parser"
version = "0.1.2"
rust-version = "1.85"
repository = "https://github.com/rust-embedded/riscv"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "no-std"]
description = "Parser for RISC-V target specifications"
documentation = "https://docs.rs/riscv-target-parser"
keywords = ["riscv", "build"]
license = "ISC"
edition = "2024"
