[package]
name = "tests-build"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "1.0"
riscv = { path = "../riscv", version = "0.13.0" }
riscv-rt = { path = "../riscv-rt", version = "0.14.0" }

[features]
single-hart = ["riscv-rt/single-hart"]
v-trap = ["riscv-rt/v-trap"]
device = ["riscv-rt/device"]
memory = ["riscv-rt/memory"]
no-exceptions = ["riscv-rt/no-exceptions"]
no-interrupts = ["riscv-rt/no-interrupts"]
