[package]
name = "tests-build"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "1.0"
riscv = { path = "../riscv" }
riscv-rt = { path = "../riscv-rt" }

[features]
pre-init = ["riscv-rt/pre-init"]
single-hart = ["riscv-rt/single-hart"]
v-trap = ["riscv-rt/v-trap"]
device = ["riscv-rt/device"]
memory = ["riscv-rt/memory"]
custom-exceptions = ["riscv-rt/custom-exceptions"]
custom-interrupts = ["riscv-rt/custom-interrupts"]
