[package]
name = "tests-trybuild"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { path = "../riscv" }
riscv-macros = { path = "../riscv-macros" }
riscv-rt = { path = "../riscv-rt", features = ["custom-exceptions", "custom-interrupts", "post-init"] }
trybuild = "1.0"

[features]
v-trap = ["riscv-rt/v-trap"]
