[package]
authors = [
    "The RISC-V Team <risc-v@teams.rust-embedded.org>",
]
categories = ["embedded", "no-std"]
description = "Derive macros re-exported in `riscv-pac`"
documentation = "https://docs.rs/riscv-rt"
keywords = ["riscv", "register", "peripheral"]
license = "MIT OR Apache-2.0"
name = "riscv-pac-macros"
repository = "https://github.com/rust-embedded/riscv"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["derive", "parsing", "proc-macro"]}
